[metadata]
name = hello
version = 1
author = NekoMimiMaid
author_email = root@localhost
description = hello
long_description = file: README.md
long_description_content_type = text/markdown
url = https://127.0.0.1/hello
project_urls = 
	Bug Tracker = https://127.0.0.1/bugs
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hello = hello:Hello
